--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -10,18 +10,14 @@
     margin-top: 5%;
 }
 
-#card__img{
-        width: 300px;
-        
+#perfil{
+        width: 100px;
+        margin-left: 25%;
     }
 
- .card{
-    border-radius: 30%;
- }
-
-    
-
-
+.iconos{
+    margin-left: 38%
+}
 
 summary{
     justify-content: right;
