--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
 }
 
 .body {
-  background-color: rgb(172, 98, 55);
+  background-color: rgb(61, 110, 112);
 }
 
 .contenedor {
@@ -14,6 +14,21 @@
 #perfil {
   width: 100px;
   margin-left: 25%;
+}
+
+.h1 {
+  text-decoration: hotpink;
+  font-style: italic;
+  background: -webkit-linear-gradient(#07eee2, #ec21a8);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.card {
+  width: 100%;
+  border-radius: 13%;
+  display: flex;
+  justify-content: center;
 }
 
 .iconos {
