--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -3,7 +3,7 @@
     padding: 0%;
 }
 .body{
-    background-color: rgb(172, 98, 55);
+    background-color: rgb(61, 110, 112);
 }
 
 .contenedor{
@@ -13,6 +13,22 @@
 #perfil{
         width: 100px;
         margin-left: 25%;
+    }
+
+.h1{
+    text-decoration: hotpink;
+    font-style: italic;
+    background: -webkit-linear-gradient(#07eee2, #ec21a8);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+    .card{
+        width: 100%;
+        border-radius: 13%;
+        display: flex;
+        justify-content: center;
+        
     }
 
 .iconos{
