--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,9 +19,10 @@
 .h1 {
   text-decoration: hotpink;
   font-style: italic;
-  background: -webkit-linear-gradient(#07eee2, #ec21a8);
+  background: -webkit-linear-gradient(#0f0f0f, #ec21a8);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  text-align: center;
 }
 
 .card {
@@ -68,6 +69,29 @@ summary {
 
 main {
   margin-left: 400px;
+}
+
+#box {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  background-color: rgba(252, 246, 246, 0.856);
+  width: 100%;
+  font-size: xx-large;
+}
+
+.foto-1 {
+  width: 30%;
+  border-radius: 20%;
+  display: flex;
+  margin-left: 50%;
+  justify-content: center;
+}
+
+.lista {
+  align-items: center;
+}
+
+#caja {
+  background-color: #52484c;
 }
 
 /*#  sourceMappingURL=style.css.map */
