estilos con boostrap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,11 @@
   margin-left: 38%;
 }
 
+.imagen-1 {
+  width: 10%;
+  border-radius: 5%;
+}
+
 summary {
   justify-content: right;
 }
@@ -90,7 +95,7 @@ main {
   align-items: center;
 }
 
-#caja {
+#mis-estudios {
   background-color: #52484c;
 }
 
@@ -101,6 +106,51 @@ main {
 #imagen {
   border-radius: 25%;
   border-style: groove;
+}
+
+.sepa {
+  text-align: center;
+}
+
+.lime {
+  font-size: xx-large;
+  text-decoration: hotpink;
+  background: -webkit-linear-gradient(#1cdfe6, #d8ec21);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.mile {
+  color: black;
+}
+
+.lemi {
+  padding: 1rem;
+  background: rgb(23, 228, 195);
+  background: linear-gradient(90deg, rgb(23, 228, 195) 0%, rgb(111, 139, 230) 23%, rgb(225, 233, 12) 50%, rgb(122, 109, 240) 71%, rgb(14, 249, 242) 100%);
+}
+
+.ponti {
+  padding: 0.4%;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(90deg, rgb(253, 228, 5) 0%, rgb(9, 9, 121) 35%, rgb(204, 7, 7) 100%);
+}
+
+.section {
+  width: 100vh;
+  padding: 2rem;
+}
+
+h2 {
+  text-decoration: rgb(20, 20, 20);
+  font-style: italic;
+  background: -webkit-linear-gradient(#460505, #080808);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-align: center;
+}
+
+.container2 {
+  text-align: center;
 }
 
 /*#  sourceMappingURL=style.css.map */
