--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,13 +43,6 @@
   margin-left: 25%;
 }
 
-.card-border-img {
-  width: 100%;
-  border-radius: 30%;
-  display: flex;
-  justify-content: center;
-}
-
 .iconos {
   margin-left: 38%;
 }
@@ -65,6 +58,7 @@ summary {
 
 .lateral {
   height: 100vh;
+  width: 30%;
   position: fixed;
 }
 
@@ -73,7 +67,8 @@ summary {
 }
 
 main {
-  margin-left: 400px;
+  margin-left: 20%;
+  width: 80%;
 }
 
 #box {
@@ -96,6 +91,7 @@ main {
 }
 
 #mis-estudios {
+  width: 100%;
   background-color: #52484c;
 }
 
@@ -130,13 +126,12 @@ main {
 }
 
 .ponti {
-  padding: 0.4%;
+  padding: 2%;
   background: rgb(2, 0, 36);
   background: linear-gradient(90deg, rgb(253, 228, 5) 0%, rgb(9, 9, 121) 35%, rgb(204, 7, 7) 100%);
 }
 
 .section {
-  width: 100vh;
   padding: 2rem;
 }
 
