--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -25,7 +25,12 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-align: center;
+    
 }
+
+
+
+
 
     .card{
         width: 100%;
@@ -34,6 +39,7 @@
         justify-content: center;
         
     }
+    
     .card-title-{
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         font-size: xx-large;
@@ -43,13 +49,10 @@
         width: 100px;
         margin-left: 25%;
     }
+
+
     
-    .card-border-img{
-    width: 100%;
-    border-radius: 30%;
-    display: flex;
-    justify-content: center;
-    }
+    
     
 
     
@@ -73,6 +76,7 @@ summary{
 
 .lateral {
     height: 100vh;
+    width: 30%;
     position: fixed;
 }
 
@@ -81,7 +85,9 @@ summary{
 }
 
 main {
-    margin-left: 400px;
+    margin-left: 20%;
+    width: 80%;
+   
 }
 
 
@@ -104,7 +110,7 @@ main {
     align-items: center;
 }
 #mis-estudios{
-    
+    width: 100%;
     background-color: #52484c;
     
 }
@@ -144,14 +150,16 @@ background: linear-gradient(90deg, rgba(23,228,195,1) 0%, rgba(111,139,230,1) 23
     
 
 .ponti{
-    padding: 0.4%;
+    padding: 2%;
     background: rgb(2,0,36);
 background: linear-gradient(90deg, rgb(253, 228, 5) 0%, rgba(9,9,121,1) 35%, rgb(204, 7, 7) 100%);
 }
 .section{
-    width: 100vh;
     padding: 2rem;
 }
+
+
+
 
 h2{
     text-decoration: rgb(20, 20, 20);
@@ -160,6 +168,7 @@ h2{
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-align: center;
+    
 }
 
 .container2{
